# FIWARE-SH

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md
.github/workflows/: ci.yml
doc/: design.md
doc/design/: class.puml  sequence.puml
doc/diagrams-design/: class.puml  sequence.puml
fiware/: CMakeLists.txt  Dockerfile
fiware-test/: CMakeLists.txt
fiware-test/resources/: roundtrip.yaml
fiware-test/src/integration/: roundtrip.cpp
fiware/doc/: demo.md  design.md
fiware/doc/diagrams-design/: sequence.puml
fiware/dockerfiles/: ros2-fiware-all-in-one  ros2-fiware-wp
fiware/sample/: fiware_ros2.yaml  hello_fiware_ros2.yaml  mock_fiware.yaml
fiware/src/: Conversion.hpp  Listener.cpp  Listener.hpp  NGSIV2Connector.cpp  NGSIV2Connector.hpp  Publisher.hpp  Subscriber.cpp  Subscriber.hpp  SystemHandle.cpp  SystemHandle.hpp  conversion.hpp
include/: Conversion.hpp
sample/: demo.md
src/: Connector.cpp  Connector.hpp  Conversion.cpp  Listener.cpp  Listener.hpp  NGSIV2Connector.cpp  NGSIV2Connector.hpp  Publisher.cpp  Publisher.hpp  Subscriber.cpp  Subscriber.hpp  SystemHandle.cpp  SystemHandle.hpp  conversion.hpp
test/: CMakeLists.txt
test/integration/: roundtrip.cpp
utils/: erase_subscriptions.sh
